--- a/.github/workflows/master_airml.yml
+++ b/.github/workflows/master_airml.yml
@@ -15,10 +15,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout
 
       - name: Set up Python version
-        uses: actions/setup-python@v2.2.2
+        uses: actions/setup-python
         with:
           python-version: '3.7'
 
