--- a/.github/workflows/master_airml.yml
+++ b/.github/workflows/master_airml.yml
@@ -4,6 +4,10 @@
 
 name: Build and deploy Python app to Azure Web App - AirML
 
+env:
+  AZURE_WEBAPP_NAME: 'AirML'  # set this to the name of your Azure Web App
+  PYTHON_VERSION: '3.7'              # set this to the Python version to use
+
 on:
   push:
     branches:
@@ -15,10 +19,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3.7.0
+        with:
+          node-version: '16.x'
 
       - name: Set up Python version
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3.0.0
         with:
           python-version: '3.7'
 
@@ -33,7 +42,7 @@ jobs:
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
       - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: python-app
           path: |
@@ -49,7 +58,7 @@ jobs:
 
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: python-app
           path: .
